--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylehome.css"/>
     <title>Fórmula Vrum</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
@@ -50,7 +51,10 @@
     </div>
     <div class="container-conteudo">
         <div class="container-filtro">
-            <h2>Filtros</h2>
+            <div class="container-titulo-filtro">
+                <h2>Filtros</h2>
+                <span class="material-symbols-outlined">filter_alt</span>
+            </div>
             <h3>Categorias</h3>
             <label><input type="checkbox" class="check">Sedã</label>
             <label><input type="checkbox">Hatch</label>
